fix(aar): increase spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -376,6 +376,7 @@ select.form-control:focus {
   z-index: 10;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  margin: 4rem 0;
 
   &::before {
     content: '';
@@ -404,13 +405,17 @@ select.form-control:focus {
 
 .aar-section-heading {
   font-weight: 700;
-  font-size: 0.8rem;
+  font-size: 1.125rem;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #6c757d;
   border-bottom: 1px solid #dee2e6;
   padding-bottom: 0.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
+}
+
+.aar-prep-section {
+  margin-bottom: 10rem;
 }
 
 /// Timeline: stacked chains with spacing
@@ -461,14 +466,14 @@ select.form-control:focus {
   }
 
   & + & {
-    margin-top: 8rem;
+    margin-top: 16rem;
     position: relative;
 
     &::before {
       content: '';
       display: block;
       position: absolute;
-      top: -4rem;
+      top: -8rem;
       left: -6rem;
       right: -6rem;
       height: 1px;
